[workspace]
members = [".", "fuzz"]

[workspace.package]
edition = "2024"

[workspace.dependencies]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[package]
name = "hlidskjalf"
version = "0.1.0"
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]

[build-dependencies]
cc = "1.2"

[features]
fuzzing = []
