[package]
name = "hlidskjalf-fuzz"
version = "0.0.0"
edition = "2021"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
hlidskjalf = { path = "..", features = ["fuzzing"] }

[[bin]]
name = "fuzz_target_1"
path = "fuzz_targets/fuzz_target_1.rs"

[profile.release]
debug = 1
panic = "abort"

[profile.dev]
panic = "abort"
